Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16094

lfsck_layout_slave_prep()) ASSERTION( !llsd->llsd_rbtree_valid )

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

      LFSCK hit crash

      [25949.297715] LustreError: 29519:0:(lfsck_layout.c:5346:lfsck_layout_slave_prep()) ASSERTION( !llsd->llsd_rbtree_valid ) failed:
      [25949.297717] LustreError: 29519:0:(lfsck_layout.c:5346:lfsck_layout_slave_prep()) LBUG
      [25949.297718] Pid: 29519, comm: lfsck 3.10.0-1160.59.1.el7_lustre.ddn16.x86_64 #1 SMP Tue Apr 5 16:43:49 PDT 2022
      [25949.297718] Call Trace:
      [25949.297788] [<0>] libcfs_call_trace+0x90/0xf0 [libcfs]
      [25949.297796] [<0>] lbug_with_loc+0x4c/0xa0 [libcfs]
      [25949.297879] [<0>] lfsck_layout_slave_prep+0x51d/0x590 [lfsck]
      [25949.297893] [<0>] lfsck_master_engine+0x1a4/0x13d0 [lfsck]
      [25949.297897] [<0>] kthread+0xd1/0xe0
      [25949.297901] [<0>] ret_from_fork_nospec_begin+0x7/0x21
      [25949.298081] [<0>] 0xfffffffffffffffe
      [25949.298082] Kernel panic - not syncing: LBUG
      

      The code shows lfsck_quit() may not be called in some corner cases, which caused this assertion failure.

            laisiyao Lai Siyao
            laisiyao Lai Siyao
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: