LU-16094 lfsck: race in lfsck_layout_slave_prep

Put layout list addition and rbtree setup in rb_rwsem to avoid race
in lfsck_layout_slave_prep().

Signed-off-by: Lai Siyao <lai.siyao@whamcloud.com>
Change-Id: I1dd939c05321d93e8ee5121a0ba1d2659bb834d8
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/48207
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Hongchao Zhang <hongchao@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>
Tested-by: Maloo <maloo@whamcloud.com>